--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
-    "colors": "^1.4.0",
+		"colors": "^1.4.0",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-async-handler": "^1.2.0",
 		"express-validator": "^7.2.1",
-		"mongoose": "^8.10.1",
+		"mongoose": "^8.13.2",
 		"morgan": "^1.10.0",
-		"slugify": "^1.6.6"
+		"multer": "^1.4.5-lts.2",
+		"sharp": "^0.34.1",
+		"slugify": "^1.6.6",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
+		"colors": "^1.4.0",
 		"eslint": "^8.57.1",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-prettier": "^10.0.1",
@@ -30,7 +34,6 @@
 		"eslint-plugin-prettier": "^5.2.3",
 		"eslint-plugin-react": "^7.37.4",
 		"nodemon": "^3.1.9",
-		"prettier": "^3.5.1",
-    "colors": "^1.4.0"
+		"prettier": "^3.5.1"
 	}
 }
