--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"bcryptjs": "^3.0.2",
 		"colors": "^1.4.0",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-async-handler": "^1.2.0",
 		"express-validator": "^7.2.1",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.13.2",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.2",
+		"nodemailer": "^6.10.1",
 		"sharp": "^0.34.1",
 		"slugify": "^1.6.6",
 		"uuid": "^11.1.0"
